--- a/lab2/lab2.runs/synth_1/.vivado.begin.rst
+++ b/lab2/lab2.runs/synth_1/.vivado.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado" Owner="cis371" Host="" Pid="9078">
+    <Process Command="vivado.bat" Owner="Hannes" Host="HANNES-PC" Pid="4052">
     </Process>
 </ProcessHandle>
